2011-11-04  Murray Cumming  <murrayc@murrayc.com>

	Handle gdouble results from python functions.
    
        * glom/libglom/data_structure/field.cc: Add a mapping
        instead of ignoring doubles.
        This avoids a stderr warning and probably makes calculations
        work.

2011-11-03  Murray Cumming  <murrayc@murrayc.com>

	Do not blank the data when showing the field definitions dialog.

	* glom/frame_glom.cc: do_menu_developer_fields(): Only blank the data 
	view if using SQLite, which requires it, because it looks like a bug to 
	the user.

1.18.5:

2011-10-27  Murray Cumming  <murrayc@murrayc.com>

	More includes fixes to fix the build.

2011-10-26  Murray Cumming  <murrayc@murrayc.com>

	Add and move #includes for the latest glibmm. 

	* glom/import_csv/csv_parser.cc:
	* glom/import_csv/dialog_import_csv_progress.cc:
	* glom/libglom/connectionpool.cc:
	* glom/libglom/connectionpool_backends/postgres_self.cc:
	* glom/libglom/privs.cc:
	* glom/libglom/spawn_with_feedback.cc:
	* glom/mode_data/box_data_list.cc:
	* glom/mode_data/box_data_list_related.cc:
	* glom/mode_data/db_adddel/db_adddel.cc:
	* glom/mode_data/notebook_data.cc:
	* glom/mode_design/print_layouts/window_print_layout_edit.h:
	* glom/utility_widgets/dialog_image_load_progress.cc:
	* glom/utility_widgets/dialog_image_save_progress.cc:
	* glom/utils_ui.cc:
	* tests/import/utils.cc: Add individual glibmm includes now that 
	gmmproc does not include glibmm.h from headers.
	Always include glibmm/thread.h first to avoid deprecation warnings.

2011-10-25  Murray Cumming  <murrayc@murrayc.com>

	Change #includes for the latest glibmm.

	Add individual includes instead of general giomm.h, glibmm.h or gtkmm.h 
	includes.
	Among other things, this might let us avoid the annoying warning about 
	deprecated GThread functions.

2011-10-24  Murray Cumming  <murrayc@murrayc.com>

	Do not include gtkmm.h, glibmm.h, giomm.h, or similar in headers.

	* Many files: Use more specific includes.
